# rinha-de-backend-2025-fastapi

./: Dockerfile  Makefile  README.md  docker-compose.yml  info.json  nginx.conf  payment-processor.yaml  pyproject.toml  requirements.txt
app/: config.py  crud.py  database.py  health_checker.py  main.py  models.py  schemas.py
